# agent-forge

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.extension  Dockerfile.service  LICENSE  Makefile  README.md  SECURITY.md  agent-forge.toml  docker-compose.extensions.yml  docker-compose.yml  pyproject.toml  spec.md  vulture_whitelist.py
.agent/workflows/: finish-issue.md
.agents/plans/: issue-130-auto-deploy-dev.md
.agents/workflows/: finish-issue.md  start-issue.md
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-dev.yml  e2e-tests.yml  release-drafter.yml  release.yml
agent_forge/: __init__.py  cli.py  config.py
agent_forge/agent/: __init__.py  core.py  models.py  persistence.py  prompts.py  state.py
agent_forge/extensions/: __init__.py  discovery.py  scaffolding.py
agent_forge/extensions/templates/: Dockerfile.template  README.md.template  __init__.py.template  pyproject.toml.template
agent_forge/extensions/templates/profiles/: default.yaml.template
agent_forge/extensions/templates/prompts/: system_prompt.md.template
agent_forge/extensions/templates/tests/: test_sample_tool.py.template
agent_forge/extensions/templates/tools/: sample_tool.py.template
agent_forge/extensions/templates/workflows/: sample-workflow.md.template
agent_forge/llm/: __init__.py  anthropic.py  base.py  errors.py  factory.py  gemini.py  openai.py
agent_forge/observability/: __init__.py  cost.py  logger.py  model_prices.json  tracing.py
agent_forge/orchestration/: __init__.py  events.py  queue.py  redis_queue.py  worker.py
agent_forge/profiles/: __init__.py  profile.py
agent_forge/profiles/builtins/: gemini.yaml  openai.yaml  thorough.yaml
agent_forge/sandbox/: Dockerfile  Dockerfile.full  Dockerfile.node  __init__.py  base.py  bwrap.py  docker.py  factory.py
agent_forge/service/: __init__.py  app.py  client.py  models.py  security.py
agent_forge/tools/: __init__.py  base.py  create_pr.py  edit_file.py  git_commit.py  git_common.py  git_create_branch.py  git_diff.py  list_directory.py  plugins.py  read_file.py  run_shell.py  search_codebase.py  write_file.py
assets/: demo.cast
docs/: architecture.md  configuration.md  extending.md  hosted-service.md  spec.md  testing.md
docs/adr/: 001-sandbox-philosophy.md
examples/echo-tool-plugin/: README.md  pyproject.toml
examples/echo-tool-plugin/src/agent_forge_echo_plugin/: __init__.py  tool.py
plugins/: __init__.py
plugins/proof-of-audit/: README.md
plugins/proof-of-audit/profiles/: full-spectrum.yaml  llm-deep-openai.yaml
plugins/proof_of_audit/: README.md  __init__.py  challenge.py  cli.py  models.py
plugins/proof_of_audit/profiles/: access-control-only.yaml  llm-deep-gemini.yaml  reentrancy-only.yaml
scripts/: build-sandbox.sh  demo.sh  record-demo.sh  update_prices.py
tests/: conftest.py
tests/e2e/: test_agent_e2e.py  test_cli_e2e.py  test_pipeline_e2e.py
tests/fixtures/: conftest.py
tests/fixtures/sample_repo/: app.py  test_app.py  utils.py
tests/integration/: test_bwrap_sandbox_integration.py  test_deployment_artifacts.py  test_redis_queue_integration.py  test_tools_integration.py
tests/unit/: test_agent_core.py  test_bwrap_sandbox.py  test_challenge_evidence.py  test_cli.py  test_cli_extensions.py  test_cli_orchestration.py  test_config.py  test_cost.py  test_deployment_artifacts.py  test_events.py  test_extension_discovery.py  test_extension_prompts.py  test_extension_scaffolding.py  test_llm_anthropic.py  test_llm_base.py  test_llm_gemini.py  test_llm_openai.py  test_multi_instance_service.py  test_observability.py  test_profiles.py  test_queue.py  test_redis_queue.py  test_sandbox.py  test_sandbox_factory.py  test_service_app.py  test_service_client.py  test_service_report_finalization.py  test_state_machine.py  test_tool_plugins.py  test_tools.py  test_tools_extra.py  test_tools_git.py  test_worker.py
